--- a/cp2_redes_neurais_com_keras.ipynb
+++ b/cp2_redes_neurais_com_keras.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,10 +18,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MariaEdPaixao/IoT-CP5/blob/main/cp2_redes_neurais_com_keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Laura-Cintra/IoT-CP5/blob/main/cp2_redes_neurais_com_keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -86,7 +88,7 @@
       "metadata": {
         "id": "FO9SJBPtJCN0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1767,7 +1769,7 @@
       "metadata": {
         "id": "9mfDdgf9Ls_W"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1789,7 +1791,7 @@
         "id": "Gxn684gsHYYl",
         "outputId": "6d44650c-56cc-42fe-b65f-9c25e12cb06e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1819,7 +1821,7 @@
         "id": "CJjjN_a3IEGG",
         "outputId": "1e096704-647a-45b0-9306-e86db7515ac9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,7 +1852,7 @@
         "id": "7nGzixN-J9Cn",
         "outputId": "c214e3e1-dedc-4ccb-822e-6a935551c6ae"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1876,7 +1878,7 @@
         "id": "jWrgGpqZVHLQ",
         "outputId": "813edc25-7aab-4de4-d040-f0f910535812"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1987,7 +1989,7 @@
         },
         "outputId": "c5b4ecee-fecf-4216-a559-adcdfd501947"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2126,7 +2128,7 @@
         "id": "ulKYNE0-NB7A",
         "outputId": "d581fcba-11d5-4b7a-e489-8208033c6eb5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2160,7 +2162,7 @@
       "metadata": {
         "id": "nWxsQD4LRrUi"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2183,7 +2185,7 @@
         "id": "GzSg6GcjRxt_",
         "outputId": "878b7a61-8423-4b0d-c17e-f4df0d9a5e97"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
